# Enhanced-Civicomfy

./: .gitignore  README.md  WARP.md  config.py  pyproject.toml
.github/workflows/: publish_action.yml
api/: civitai.py
downloader/: chunk_downloader.py  manager.py
server/routes/: DownloadModel.py  GetBaseModels.py  GetModelDetails.py  GetModelTypes.py  SearchModels.py  TagState.py  __init__.py
utils/: helpers.py
web/js/: civitaiDownloader.css
web/js/api/: civitai.js
web/js/ui/: UI.js  searchRenderer.js  templates.js
web/js/ui/handlers/: downloadHandler.js  eventListeners.js  searchHandler.js  settingsHandler.js  statusHandler.js
