[project]
name = "enhanced-civicomfy"
description = "Civicomfy seamlessly integrates Civitai's vast model repository directly into ComfyUI, allowing you to search, download, and organize AI models without leaving your workflow."
version = "1.1.0"
license = {file = "LICENSE"}
dependencies = []

[project.urls]
Repository = "https://github.com/BenjaMITM/Enhanced-Civicomfy"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "benjamitm"
DisplayName = "Enhanced-Civicomfy"
Icon = ""
